fixed bug on major card wichs prevents back button to be pressed, z-index issue

--- a/Juegos/CartaMayor/style.css
+++ b/Juegos/CartaMayor/style.css
@@ -298,7 +298,6 @@ button {
     align-items: center;
     text-align: center;
     border-radius: 25px;
-    z-index: 1;
     position: absolute;
     top: 85%;
     left: 43.5%;
@@ -316,6 +315,7 @@ button {
     height: 80px;
     top: 0;
     left: 0;
+    z-index: 9999999999;
   }
   .modal-open-2::-moz-focus-inner,
   input::-moz-focus-inner {
